-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.1
-
None
-
Debian Buster 10.6, amd64
-
-
9bea986b870e54bd04ccd23f2d204fbae16994b4 (qt/qtserialbus/dev) f49a99f03608f5eb294896a4a039bc9badbc64c6 (qt/qtserialbus/5.15)
libsocketcan is not available on Debian Buster 10.6. However, there is libsocketcan2.
Why rely on a 3rd party library not use the kernel's netlink interface?
- resulted in
-
QTBUG-103387 QLibrary doesn't load() after a previously failed load()
-
- Closed
-
For Gerrit Dashboard: QTBUG-87328 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
317298,2 | SocketCAN: Fix loading libsocketcan on Debian | 5.15 | qt/qtserialbus | Status: MERGED | +2 | 0 |
317411,3 | SocketCAN: Fix loading libsocketcan on Debian | dev | qt/qtserialbus | Status: MERGED | +2 | 0 |