SocketCAN: Fix loading libsocketcan on Debian

If only the package libsocketcan2 is installed,
no symlink libsocketcan.so -> libsocketcan.so.2
is created. Therefore loading the library fails.

In that case, retry with explicit version number
given.

[ChangeLog][Plugins][SocketCAN]
Fixed that libsocketcan could not be loaded when
no symlink libsocketcan.so -> libsocketcan.so.2
was present.

Fixes: QTBUG-87328
Change-Id: I815707aa7066fe0e27e702edc316d93c1418ca6d
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>
(cherry picked from commit 9bea986b870e54bd04ccd23f2d204fbae16994b4)